crates/etas_tests/fixtures/compiler/projects/negative/missing_module/src/app/main.es
module app.main;

import app.missing.{helper};

flow main(args: Array<string>) -> i32 {
    return 0;
}
